--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">lab1</string>
     <string name="text">Text For Button</string>
-    <string name="image">Text For Image</string>
+    <string name="image">In our situation it is need only to avoid warning</string>
     <string name="_1">1</string>
     <string name="_2">2></string>
     <string name="_3">3</string>
